# opengemini-client-cpp

./: .clang-format  .gitignore  .typos.toml  CMakeLists.txt  README.md  README_CN.md  README_EN.md
.github/workflows/: clang_format.yml  line_lint.yml
cmake/: OpenGeminiCppConfig.cmake.in  OpenGeminiCxxConfig.cmake.in
cmake/util/: version.cmake
docs/: CMakeLists.txt
examples/: CMakeLists.txt
examples/integration/fetch_content/: CMakeLists.txt  main.cpp
examples/integration/find_package/: CMakeLists.txt  main.cpp
examples/sync/: CMakeLists.txt  Database.cpp  Query.cpp  Write.cpp
examples/usage/: CMakeLists.txt
examples/usage/sync/: Database.cpp  Query.cpp  Write.cpp
include/: CMakeLists.txt
include/opengemini/: Client.hpp  ClientConfig.hpp  ClientConfigBuilder.hpp  CompletionToken.hpp  Endpoint.hpp  Error.hpp  Exception.hpp  Point.hpp  Precision.hpp  Query.hpp  RetentionPolicy.hpp  RpConfig.hpp  Version.hpp
include/opengemini/impl/: Client.ipp  ClientConfigBuilder.cpp  ClientImpl.cpp  ClientImpl.hpp  ClientImpl.tpp  CompletionToken.tpp  ErrorCode.cpp  ErrorCode.hpp  Precision.ipp  Query.ipp
include/opengemini/impl/cli/: Database.cpp  Functor.hpp  Ping.cpp  Query.cpp  RetentionPolicy.cpp  Write.tpp
include/opengemini/impl/cli/database/: Database.cpp  Database.hpp  Ping.cpp  Ping.hpp
include/opengemini/impl/cli/policy/: RetentionPolicy.cpp  RetentionPolicy.hpp
include/opengemini/impl/cli/query/: Query.cpp  Query.hpp
include/opengemini/impl/cli/write/: Write.hpp  Write.tpp
include/opengemini/impl/comm/: CompletionSignature.hpp  Context.cpp  Context.hpp  TaskSlot.hpp  UrlTargets.hpp
include/opengemini/impl/enc/: LineProtocolEncoder.cpp  LineProtocolEncoder.hpp
include/opengemini/impl/http/: ConnectionPool.hpp  ConnectionPool.tpp  HttpClient.cpp  HttpClient.hpp  HttpsClient.cpp  HttpsClient.hpp  IHttpClient.cpp  IHttpClient.hpp
include/opengemini/impl/lb/: LoadBalancer.cpp  LoadBalancer.hpp
include/opengemini/impl/util/: Base64.hpp  DurationLiterals.hpp  ErrorHandling.hpp  Preprocessor.hpp  TypeTraits.hpp
include/opengeminicpp/: Client.hpp  client.hpp
include/opengeminicpp/impl/: Client.cpp  Client.hpp  client.cpp  client.hpp
test/: CMakeLists.txt  Import_Test.cpp
test/unit/: CMakeLists.txt  ClientConfigBuilder_Test.cpp  Client_Test.cpp
test/unit/impl/cli/: Database_Test.cpp  Ping_Test.cpp  Query_Test.cpp  RetentionPolicy_Test.cpp  Write_Test.cpp
test/unit/impl/enc/: LineProtocolEncoder_Test.cpp
test/unit/impl/http/: IHttpClient_Test.cpp
test/unit/impl/lb/: LoadBalancer_Test.cpp
test/util/: CMakeLists.txt
test/util/test/: ClientImplTestFixture.hpp  ExpectThrowAs.hpp  HackMember.hpp  MockIHttpClient.hpp  Random.hpp  SelfRootCA.hpp  TestFixtureWithContext.hpp
